welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:23: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if  (getX():Int!=6 && getY():Int!=6){
        ^