welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	
	while(!PosF){
		baisseBrosse();
		for(k<-0 to 5){
			avance();
		}
		gauche();
		avance();
		gauche();
		for(k<-0 to 5){
			avance();
		}
		droite();
		avance();
		droite();
	}
}


def PosF():Boolean{
	if  (getX():Int!=6 && getY():Int!=6){
		return true
	}else{
		return false
	}
}
